// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`golden fixtures > button.arv > css 1`] = `
".Button_root_0p4oom {
  display: inline-flex;
  align-items: center;
  gap: 4px;
  padding: 8px 16px;
  border-radius: 8px;
  color: white;
  outline: none;
}

.Button_root_0p4oom:focus-visible {
  outline: 2px solid #635bff;
  outline-offset: 2px;
}

.Button_root_0p4oom:hover {
  filter: brightness(1.05);
}

.Button_icon_0p4oom {
  flex-shrink: 0;
}

.Button_label_0p4oom {
  font-weight: 500;
}

.Button_size_sm_root_0p4oom {
  font-size: 12px;
}

.Button_size_md_root_0p4oom {
  font-size: 14px;
}

.Button_size_lg_root_0p4oom {
  font-size: 16px;
}

.Button_size_lg_icon_0p4oom {
  width: 20px;
}

.Button_tone_primary_root_0p4oom {
  background: #635bff;
}

.Button_tone_danger_root_0p4oom {
  background: #e5484d;
}

.Button_size_sm_tone_danger_root_0p4oom {
  font-weight: 600;
}
"
`;

exports[`golden fixtures > button.arv > dts 1`] = `
"// Generated by @arviahq/compiler - do not edit.

export type ButtonProps = {
  size?: "sm" | "md" | "lg";
  tone?: "primary" | "danger";
};

export type ButtonSlots = {
  root: string;
  icon: string;
  label: string;
};

export declare function Button(props?: ButtonProps): ButtonSlots;
"
`;

exports[`golden fixtures > button.arv > js 1`] = `
"// Generated by @arviahq/compiler - do not edit.

const _isObj = (v) => v != null && typeof v === "object";
const _resolveStatic = (v, fallback) => (_isObj(v) ? (v.initial ?? fallback) : (v ?? fallback));

const _applyVariant = (c, variants, respClasses, cqClasses, v, raw, defaultVal, s) => {
  if (_isObj(raw)) {
    const initial = raw.initial ?? defaultVal;
    if (initial != null && variants[v] && variants[v][initial] && variants[v][initial][s]) {
      c += (c ? " " : "") + variants[v][initial][s];
    }
    for (const key in raw) {
      if (key === "initial") continue;
      const val = raw[key];
      const add = key.startsWith("$")
        ? (cqClasses[key.slice(1)] && cqClasses[key.slice(1)][v] && cqClasses[key.slice(1)][v][val]
            ? cqClasses[key.slice(1)][v][val][s]
            : undefined)
        : (respClasses[key] && respClasses[key][v] && respClasses[key][v][val]
            ? respClasses[key][v][val][s]
            : undefined);
      if (add) c += (c ? " " : "") + add;
    }
  } else {
    const val = raw;
    const add = val != null && variants[v][val] ? variants[v][val][s] : undefined;
    if (add) c += (c ? " " : "") + add;
  }
  return c;
};

const _h = (base, variants, compounds, defaults, responsive, respClasses, containers, cqClasses, slots, props) => {
  const out = {};
  for (const s of slots) {
    let c = base[s] || "";
    for (const v in variants) {
      const raw = props && props[v] !== undefined ? props[v] : defaults[v];
      c = _applyVariant(c, variants, respClasses, cqClasses, v, raw, defaults[v], s);
    }
    for (const [bp, overrides] of responsive) {
      for (const v in overrides) {
        if (props && props[v] !== undefined) continue;
        const val = overrides[v];
        const add = respClasses[bp] && respClasses[bp][v] && respClasses[bp][v][val]
          ? respClasses[bp][v][val][s]
          : undefined;
        if (add) c += (c ? " " : "") + add;
      }
    }
    for (const [cq, overrides] of containers) {
      for (const v in overrides) {
        if (props && props[v] !== undefined) continue;
        const val = overrides[v];
        const add = cqClasses[cq] && cqClasses[cq][v] && cqClasses[cq][v][val]
          ? cqClasses[cq][v][val][s]
          : undefined;
        if (add) c += (c ? " " : "") + add;
      }
    }
    for (const [match, cls] of compounds) {
      let ok = true;
      for (const v in match) {
        if (_resolveStatic((props && props[v]) ?? defaults[v], defaults[v]) !== match[v]) {
          ok = false;
          break;
        }
      }
      if (ok && cls[s]) c += (c ? " " : "") + cls[s];
    }
    out[s] = c;
  }
  return out;
};

const Button_base = {
  "root": "Button_root_0p4oom",
  "icon": "Button_icon_0p4oom",
  "label": "Button_label_0p4oom"
};

const Button_variants = {
  "size": {
    "sm": {
      "root": "Button_size_sm_root_0p4oom"
    },
    "md": {
      "root": "Button_size_md_root_0p4oom"
    },
    "lg": {
      "root": "Button_size_lg_root_0p4oom",
      "icon": "Button_size_lg_icon_0p4oom"
    }
  },
  "tone": {
    "primary": {
      "root": "Button_tone_primary_root_0p4oom"
    },
    "danger": {
      "root": "Button_tone_danger_root_0p4oom"
    }
  }
};

const Button_compounds = [
  [
    {
      "size": "sm",
      "tone": "danger"
    },
    {
      "root": "Button_size_sm_tone_danger_root_0p4oom"
    }
  ]
];

const Button_defaults = {
  "size": "md",
  "tone": "primary"
};

const Button_responsive = [];

const Button_respClasses = {};

const Button_containers = [];

const Button_cqClasses = {};

export function Button(props) {
  return _h(Button_base, Button_variants, Button_compounds, Button_defaults, Button_responsive, Button_respClasses, Button_containers, Button_cqClasses, ["root","icon","label"], props);
}
"
`;

exports[`golden fixtures > container-card.arv > css 1`] = `
".Card_root_0cgz70 {
  container-type: inline-size;
}

.Card_root_0cgz70 {
  display: block;
}

.Card_layout_stacked_root_0cgz70 {
  padding: 8px;
}

.Card_layout_row_root_0cgz70 {
  padding: 16px;
}

@container (min-width: 480px) {
.Card_layout_row_cq_wide_root_0cgz70 {
  padding: 16px;
}
}
"
`;

exports[`golden fixtures > container-card.arv > dts 1`] = `
"// Generated by @arviahq/compiler - do not edit.

export type CardProps = {
  layout?: "stacked" | "row" | { initial?: "stacked" | "row"; "$wide"?: "stacked" | "row"; };
};

export type CardSlots = {
  root: string;
};

export declare function Card(props?: CardProps): CardSlots;
"
`;

exports[`golden fixtures > container-card.arv > js 1`] = `
"// Generated by @arviahq/compiler - do not edit.

const _isObj = (v) => v != null && typeof v === "object";
const _resolveStatic = (v, fallback) => (_isObj(v) ? (v.initial ?? fallback) : (v ?? fallback));

const _applyVariant = (c, variants, respClasses, cqClasses, v, raw, defaultVal, s) => {
  if (_isObj(raw)) {
    const initial = raw.initial ?? defaultVal;
    if (initial != null && variants[v] && variants[v][initial] && variants[v][initial][s]) {
      c += (c ? " " : "") + variants[v][initial][s];
    }
    for (const key in raw) {
      if (key === "initial") continue;
      const val = raw[key];
      const add = key.startsWith("$")
        ? (cqClasses[key.slice(1)] && cqClasses[key.slice(1)][v] && cqClasses[key.slice(1)][v][val]
            ? cqClasses[key.slice(1)][v][val][s]
            : undefined)
        : (respClasses[key] && respClasses[key][v] && respClasses[key][v][val]
            ? respClasses[key][v][val][s]
            : undefined);
      if (add) c += (c ? " " : "") + add;
    }
  } else {
    const val = raw;
    const add = val != null && variants[v][val] ? variants[v][val][s] : undefined;
    if (add) c += (c ? " " : "") + add;
  }
  return c;
};

const _h = (base, variants, compounds, defaults, responsive, respClasses, containers, cqClasses, slots, props) => {
  const out = {};
  for (const s of slots) {
    let c = base[s] || "";
    for (const v in variants) {
      const raw = props && props[v] !== undefined ? props[v] : defaults[v];
      c = _applyVariant(c, variants, respClasses, cqClasses, v, raw, defaults[v], s);
    }
    for (const [bp, overrides] of responsive) {
      for (const v in overrides) {
        if (props && props[v] !== undefined) continue;
        const val = overrides[v];
        const add = respClasses[bp] && respClasses[bp][v] && respClasses[bp][v][val]
          ? respClasses[bp][v][val][s]
          : undefined;
        if (add) c += (c ? " " : "") + add;
      }
    }
    for (const [cq, overrides] of containers) {
      for (const v in overrides) {
        if (props && props[v] !== undefined) continue;
        const val = overrides[v];
        const add = cqClasses[cq] && cqClasses[cq][v] && cqClasses[cq][v][val]
          ? cqClasses[cq][v][val][s]
          : undefined;
        if (add) c += (c ? " " : "") + add;
      }
    }
    for (const [match, cls] of compounds) {
      let ok = true;
      for (const v in match) {
        if (_resolveStatic((props && props[v]) ?? defaults[v], defaults[v]) !== match[v]) {
          ok = false;
          break;
        }
      }
      if (ok && cls[s]) c += (c ? " " : "") + cls[s];
    }
    out[s] = c;
  }
  return out;
};

const Card_base = {
  "root": "Card_root_0cgz70"
};

const Card_variants = {
  "layout": {
    "stacked": {
      "root": "Card_layout_stacked_root_0cgz70"
    },
    "row": {
      "root": "Card_layout_row_root_0cgz70"
    }
  }
};

const Card_compounds = [];

const Card_defaults = {
  "layout": "stacked"
};

const Card_responsive = [];

const Card_respClasses = {};

const Card_containers = [
  [
    "wide",
    {
      "layout": "row"
    }
  ]
];

const Card_cqClasses = {
  "wide": {
    "layout": {
      "row": {
        "root": "Card_layout_row_cq_wide_root_0cgz70"
      }
    }
  }
};

export function Card(props) {
  return _h(Card_base, Card_variants, Card_compounds, Card_defaults, Card_responsive, Card_respClasses, Card_containers, Card_cqClasses, ["root"], props);
}
"
`;

exports[`golden fixtures > keyframes.arv > css 1`] = `
"@keyframes pulse_1kqpaa {
from {
  opacity: 1;
}

to {
  opacity: 0.5;
}
}

.Box_root_0tzzc8 {
  animation: pulse_1kqpaa 120ms;
}
"
`;

exports[`golden fixtures > keyframes.arv > dts 1`] = `
"// Generated by @arviahq/compiler - do not edit.

export type BoxSlots = {
  root: string;
};

export declare function Box(): BoxSlots;
"
`;

exports[`golden fixtures > keyframes.arv > js 1`] = `
"// Generated by @arviahq/compiler - do not edit.

const _isObj = (v) => v != null && typeof v === "object";
const _resolveStatic = (v, fallback) => (_isObj(v) ? (v.initial ?? fallback) : (v ?? fallback));

const _applyVariant = (c, variants, respClasses, cqClasses, v, raw, defaultVal, s) => {
  if (_isObj(raw)) {
    const initial = raw.initial ?? defaultVal;
    if (initial != null && variants[v] && variants[v][initial] && variants[v][initial][s]) {
      c += (c ? " " : "") + variants[v][initial][s];
    }
    for (const key in raw) {
      if (key === "initial") continue;
      const val = raw[key];
      const add = key.startsWith("$")
        ? (cqClasses[key.slice(1)] && cqClasses[key.slice(1)][v] && cqClasses[key.slice(1)][v][val]
            ? cqClasses[key.slice(1)][v][val][s]
            : undefined)
        : (respClasses[key] && respClasses[key][v] && respClasses[key][v][val]
            ? respClasses[key][v][val][s]
            : undefined);
      if (add) c += (c ? " " : "") + add;
    }
  } else {
    const val = raw;
    const add = val != null && variants[v][val] ? variants[v][val][s] : undefined;
    if (add) c += (c ? " " : "") + add;
  }
  return c;
};

const _h = (base, variants, compounds, defaults, responsive, respClasses, containers, cqClasses, slots, props) => {
  const out = {};
  for (const s of slots) {
    let c = base[s] || "";
    for (const v in variants) {
      const raw = props && props[v] !== undefined ? props[v] : defaults[v];
      c = _applyVariant(c, variants, respClasses, cqClasses, v, raw, defaults[v], s);
    }
    for (const [bp, overrides] of responsive) {
      for (const v in overrides) {
        if (props && props[v] !== undefined) continue;
        const val = overrides[v];
        const add = respClasses[bp] && respClasses[bp][v] && respClasses[bp][v][val]
          ? respClasses[bp][v][val][s]
          : undefined;
        if (add) c += (c ? " " : "") + add;
      }
    }
    for (const [cq, overrides] of containers) {
      for (const v in overrides) {
        if (props && props[v] !== undefined) continue;
        const val = overrides[v];
        const add = cqClasses[cq] && cqClasses[cq][v] && cqClasses[cq][v][val]
          ? cqClasses[cq][v][val][s]
          : undefined;
        if (add) c += (c ? " " : "") + add;
      }
    }
    for (const [match, cls] of compounds) {
      let ok = true;
      for (const v in match) {
        if (_resolveStatic((props && props[v]) ?? defaults[v], defaults[v]) !== match[v]) {
          ok = false;
          break;
        }
      }
      if (ok && cls[s]) c += (c ? " " : "") + cls[s];
    }
    out[s] = c;
  }
  return out;
};

const Box_base = {
  "root": "Box_root_0tzzc8"
};

const Box_variants = {};

const Box_compounds = [];

const Box_defaults = {};

const Box_responsive = [];

const Box_respClasses = {};

const Box_containers = [];

const Box_cqClasses = {};

export function Box(props) {
  return _h(Box_base, Box_variants, Box_compounds, Box_defaults, Box_responsive, Box_respClasses, Box_containers, Box_cqClasses, ["root"], props);
}
"
`;

exports[`golden fixtures > local-tokens.arv > css 1`] = `
".Chip_root_0tkuoj {
  padding: 6px 8px;
  border-radius: 999px;
  background: #635bff;
}

.Chip_size_lg_root_0tkuoj {
  padding: calc(6px * 2);
}
"
`;

exports[`golden fixtures > local-tokens.arv > dts 1`] = `
"// Generated by @arviahq/compiler - do not edit.

export type ChipProps = {
  size?: "lg";
};

export type ChipSlots = {
  root: string;
};

export declare function Chip(props?: ChipProps): ChipSlots;
"
`;

exports[`golden fixtures > local-tokens.arv > js 1`] = `
"// Generated by @arviahq/compiler - do not edit.

const _isObj = (v) => v != null && typeof v === "object";
const _resolveStatic = (v, fallback) => (_isObj(v) ? (v.initial ?? fallback) : (v ?? fallback));

const _applyVariant = (c, variants, respClasses, cqClasses, v, raw, defaultVal, s) => {
  if (_isObj(raw)) {
    const initial = raw.initial ?? defaultVal;
    if (initial != null && variants[v] && variants[v][initial] && variants[v][initial][s]) {
      c += (c ? " " : "") + variants[v][initial][s];
    }
    for (const key in raw) {
      if (key === "initial") continue;
      const val = raw[key];
      const add = key.startsWith("$")
        ? (cqClasses[key.slice(1)] && cqClasses[key.slice(1)][v] && cqClasses[key.slice(1)][v][val]
            ? cqClasses[key.slice(1)][v][val][s]
            : undefined)
        : (respClasses[key] && respClasses[key][v] && respClasses[key][v][val]
            ? respClasses[key][v][val][s]
            : undefined);
      if (add) c += (c ? " " : "") + add;
    }
  } else {
    const val = raw;
    const add = val != null && variants[v][val] ? variants[v][val][s] : undefined;
    if (add) c += (c ? " " : "") + add;
  }
  return c;
};

const _h = (base, variants, compounds, defaults, responsive, respClasses, containers, cqClasses, slots, props) => {
  const out = {};
  for (const s of slots) {
    let c = base[s] || "";
    for (const v in variants) {
      const raw = props && props[v] !== undefined ? props[v] : defaults[v];
      c = _applyVariant(c, variants, respClasses, cqClasses, v, raw, defaults[v], s);
    }
    for (const [bp, overrides] of responsive) {
      for (const v in overrides) {
        if (props && props[v] !== undefined) continue;
        const val = overrides[v];
        const add = respClasses[bp] && respClasses[bp][v] && respClasses[bp][v][val]
          ? respClasses[bp][v][val][s]
          : undefined;
        if (add) c += (c ? " " : "") + add;
      }
    }
    for (const [cq, overrides] of containers) {
      for (const v in overrides) {
        if (props && props[v] !== undefined) continue;
        const val = overrides[v];
        const add = cqClasses[cq] && cqClasses[cq][v] && cqClasses[cq][v][val]
          ? cqClasses[cq][v][val][s]
          : undefined;
        if (add) c += (c ? " " : "") + add;
      }
    }
    for (const [match, cls] of compounds) {
      let ok = true;
      for (const v in match) {
        if (_resolveStatic((props && props[v]) ?? defaults[v], defaults[v]) !== match[v]) {
          ok = false;
          break;
        }
      }
      if (ok && cls[s]) c += (c ? " " : "") + cls[s];
    }
    out[s] = c;
  }
  return out;
};

const Chip_base = {
  "root": "Chip_root_0tkuoj"
};

const Chip_variants = {
  "size": {
    "lg": {
      "root": "Chip_size_lg_root_0tkuoj"
    }
  }
};

const Chip_compounds = [];

const Chip_defaults = {};

const Chip_responsive = [];

const Chip_respClasses = {};

const Chip_containers = [];

const Chip_cqClasses = {};

export function Chip(props) {
  return _h(Chip_base, Chip_variants, Chip_compounds, Chip_defaults, Chip_responsive, Chip_respClasses, Chip_containers, Chip_cqClasses, ["root"], props);
}
"
`;

exports[`golden fixtures > multi-theme.arv > css 1`] = `
":root {
  --arvia-color-text: #111111;
  --arvia-color-background: #ffffff;
}

@media (prefers-color-scheme: dark) {
  :root {
  --arvia-color-text: #eeeeee;
  --arvia-color-background: #000000;
  }
}

[data-arvia-theme="light"] {
  --arvia-color-text: #111111;
  --arvia-color-background: #ffffff;
}

[data-arvia-theme="dark"] {
  --arvia-color-text: #eeeeee;
  --arvia-color-background: #000000;
}

body {
  color: var(--arvia-color-text);
  background: var(--arvia-color-background);
}
"
`;

exports[`golden fixtures > multi-theme.arv > dts 1`] = `
"// Generated by @arviahq/compiler - do not edit.
export {};
"
`;

exports[`golden fixtures > multi-theme.arv > js 1`] = `
"// Generated by @arviahq/compiler - do not edit.
export {};
"
`;

exports[`golden fixtures > recipes-nested.arv > css 1`] = `
".Card_root_07xhee {
  border-radius: 8px;
  border: 1px solid #e5e5e5;
  background: white;
  padding: 16px;
  background: #fafafa;
}
"
`;

exports[`golden fixtures > recipes-nested.arv > dts 1`] = `
"// Generated by @arviahq/compiler - do not edit.

export type CardSlots = {
  root: string;
};

export declare function Card(): CardSlots;
"
`;

exports[`golden fixtures > recipes-nested.arv > js 1`] = `
"// Generated by @arviahq/compiler - do not edit.

const _isObj = (v) => v != null && typeof v === "object";
const _resolveStatic = (v, fallback) => (_isObj(v) ? (v.initial ?? fallback) : (v ?? fallback));

const _applyVariant = (c, variants, respClasses, cqClasses, v, raw, defaultVal, s) => {
  if (_isObj(raw)) {
    const initial = raw.initial ?? defaultVal;
    if (initial != null && variants[v] && variants[v][initial] && variants[v][initial][s]) {
      c += (c ? " " : "") + variants[v][initial][s];
    }
    for (const key in raw) {
      if (key === "initial") continue;
      const val = raw[key];
      const add = key.startsWith("$")
        ? (cqClasses[key.slice(1)] && cqClasses[key.slice(1)][v] && cqClasses[key.slice(1)][v][val]
            ? cqClasses[key.slice(1)][v][val][s]
            : undefined)
        : (respClasses[key] && respClasses[key][v] && respClasses[key][v][val]
            ? respClasses[key][v][val][s]
            : undefined);
      if (add) c += (c ? " " : "") + add;
    }
  } else {
    const val = raw;
    const add = val != null && variants[v][val] ? variants[v][val][s] : undefined;
    if (add) c += (c ? " " : "") + add;
  }
  return c;
};

const _h = (base, variants, compounds, defaults, responsive, respClasses, containers, cqClasses, slots, props) => {
  const out = {};
  for (const s of slots) {
    let c = base[s] || "";
    for (const v in variants) {
      const raw = props && props[v] !== undefined ? props[v] : defaults[v];
      c = _applyVariant(c, variants, respClasses, cqClasses, v, raw, defaults[v], s);
    }
    for (const [bp, overrides] of responsive) {
      for (const v in overrides) {
        if (props && props[v] !== undefined) continue;
        const val = overrides[v];
        const add = respClasses[bp] && respClasses[bp][v] && respClasses[bp][v][val]
          ? respClasses[bp][v][val][s]
          : undefined;
        if (add) c += (c ? " " : "") + add;
      }
    }
    for (const [cq, overrides] of containers) {
      for (const v in overrides) {
        if (props && props[v] !== undefined) continue;
        const val = overrides[v];
        const add = cqClasses[cq] && cqClasses[cq][v] && cqClasses[cq][v][val]
          ? cqClasses[cq][v][val][s]
          : undefined;
        if (add) c += (c ? " " : "") + add;
      }
    }
    for (const [match, cls] of compounds) {
      let ok = true;
      for (const v in match) {
        if (_resolveStatic((props && props[v]) ?? defaults[v], defaults[v]) !== match[v]) {
          ok = false;
          break;
        }
      }
      if (ok && cls[s]) c += (c ? " " : "") + cls[s];
    }
    out[s] = c;
  }
  return out;
};

const Card_base = {
  "root": "Card_root_07xhee"
};

const Card_variants = {};

const Card_compounds = [];

const Card_defaults = {};

const Card_responsive = [];

const Card_respClasses = {};

const Card_containers = [];

const Card_cqClasses = {};

export function Card(props) {
  return _h(Card_base, Card_variants, Card_compounds, Card_defaults, Card_responsive, Card_respClasses, Card_containers, Card_cqClasses, ["root"], props);
}
"
`;

exports[`golden fixtures > responsive-button.arv > css 1`] = `
".Button_root_0tbkbv {
  display: inline-flex;
}

.Button_size_sm_root_0tbkbv {
  padding: 4px;
}

.Button_size_lg_root_0tbkbv {
  padding: 16px;
}

@media (min-width: 768px) {
.Button_size_lg_bp_md_root_0tbkbv {
  padding: 16px;
}
}
"
`;

exports[`golden fixtures > responsive-button.arv > dts 1`] = `
"// Generated by @arviahq/compiler - do not edit.

export type ButtonProps = {
  size?: "sm" | "lg" | { initial?: "sm" | "lg"; md?: "sm" | "lg"; };
};

export type ButtonSlots = {
  root: string;
};

export declare function Button(props?: ButtonProps): ButtonSlots;
"
`;

exports[`golden fixtures > responsive-button.arv > js 1`] = `
"// Generated by @arviahq/compiler - do not edit.

const _isObj = (v) => v != null && typeof v === "object";
const _resolveStatic = (v, fallback) => (_isObj(v) ? (v.initial ?? fallback) : (v ?? fallback));

const _applyVariant = (c, variants, respClasses, cqClasses, v, raw, defaultVal, s) => {
  if (_isObj(raw)) {
    const initial = raw.initial ?? defaultVal;
    if (initial != null && variants[v] && variants[v][initial] && variants[v][initial][s]) {
      c += (c ? " " : "") + variants[v][initial][s];
    }
    for (const key in raw) {
      if (key === "initial") continue;
      const val = raw[key];
      const add = key.startsWith("$")
        ? (cqClasses[key.slice(1)] && cqClasses[key.slice(1)][v] && cqClasses[key.slice(1)][v][val]
            ? cqClasses[key.slice(1)][v][val][s]
            : undefined)
        : (respClasses[key] && respClasses[key][v] && respClasses[key][v][val]
            ? respClasses[key][v][val][s]
            : undefined);
      if (add) c += (c ? " " : "") + add;
    }
  } else {
    const val = raw;
    const add = val != null && variants[v][val] ? variants[v][val][s] : undefined;
    if (add) c += (c ? " " : "") + add;
  }
  return c;
};

const _h = (base, variants, compounds, defaults, responsive, respClasses, containers, cqClasses, slots, props) => {
  const out = {};
  for (const s of slots) {
    let c = base[s] || "";
    for (const v in variants) {
      const raw = props && props[v] !== undefined ? props[v] : defaults[v];
      c = _applyVariant(c, variants, respClasses, cqClasses, v, raw, defaults[v], s);
    }
    for (const [bp, overrides] of responsive) {
      for (const v in overrides) {
        if (props && props[v] !== undefined) continue;
        const val = overrides[v];
        const add = respClasses[bp] && respClasses[bp][v] && respClasses[bp][v][val]
          ? respClasses[bp][v][val][s]
          : undefined;
        if (add) c += (c ? " " : "") + add;
      }
    }
    for (const [cq, overrides] of containers) {
      for (const v in overrides) {
        if (props && props[v] !== undefined) continue;
        const val = overrides[v];
        const add = cqClasses[cq] && cqClasses[cq][v] && cqClasses[cq][v][val]
          ? cqClasses[cq][v][val][s]
          : undefined;
        if (add) c += (c ? " " : "") + add;
      }
    }
    for (const [match, cls] of compounds) {
      let ok = true;
      for (const v in match) {
        if (_resolveStatic((props && props[v]) ?? defaults[v], defaults[v]) !== match[v]) {
          ok = false;
          break;
        }
      }
      if (ok && cls[s]) c += (c ? " " : "") + cls[s];
    }
    out[s] = c;
  }
  return out;
};

const Button_base = {
  "root": "Button_root_0tbkbv"
};

const Button_variants = {
  "size": {
    "sm": {
      "root": "Button_size_sm_root_0tbkbv"
    },
    "lg": {
      "root": "Button_size_lg_root_0tbkbv"
    }
  }
};

const Button_compounds = [];

const Button_defaults = {
  "size": "sm"
};

const Button_responsive = [
  [
    "md",
    {
      "size": "lg"
    }
  ]
];

const Button_respClasses = {
  "md": {
    "size": {
      "lg": {
        "root": "Button_size_lg_bp_md_root_0tbkbv"
      }
    }
  }
};

const Button_containers = [];

const Button_cqClasses = {};

export function Button(props) {
  return _h(Button_base, Button_variants, Button_compounds, Button_defaults, Button_responsive, Button_respClasses, Button_containers, Button_cqClasses, ["root"], props);
}
"
`;

exports[`golden fixtures > single-slot.arv > css 1`] = `
".Badge_root_1mojuh {
  padding: 2px 8px;
  border-radius: 999px;
}

.Badge_tone_neutral_root_1mojuh {
  background: #eee;
}

.Badge_tone_success_root_1mojuh {
  background: #d3f9d8;
}
"
`;

exports[`golden fixtures > single-slot.arv > dts 1`] = `
"// Generated by @arviahq/compiler - do not edit.

export type BadgeProps = {
  tone?: "neutral" | "success";
};

export type BadgeSlots = {
  root: string;
};

export declare function Badge(props?: BadgeProps): BadgeSlots;
"
`;

exports[`golden fixtures > single-slot.arv > js 1`] = `
"// Generated by @arviahq/compiler - do not edit.

const _isObj = (v) => v != null && typeof v === "object";
const _resolveStatic = (v, fallback) => (_isObj(v) ? (v.initial ?? fallback) : (v ?? fallback));

const _applyVariant = (c, variants, respClasses, cqClasses, v, raw, defaultVal, s) => {
  if (_isObj(raw)) {
    const initial = raw.initial ?? defaultVal;
    if (initial != null && variants[v] && variants[v][initial] && variants[v][initial][s]) {
      c += (c ? " " : "") + variants[v][initial][s];
    }
    for (const key in raw) {
      if (key === "initial") continue;
      const val = raw[key];
      const add = key.startsWith("$")
        ? (cqClasses[key.slice(1)] && cqClasses[key.slice(1)][v] && cqClasses[key.slice(1)][v][val]
            ? cqClasses[key.slice(1)][v][val][s]
            : undefined)
        : (respClasses[key] && respClasses[key][v] && respClasses[key][v][val]
            ? respClasses[key][v][val][s]
            : undefined);
      if (add) c += (c ? " " : "") + add;
    }
  } else {
    const val = raw;
    const add = val != null && variants[v][val] ? variants[v][val][s] : undefined;
    if (add) c += (c ? " " : "") + add;
  }
  return c;
};

const _h = (base, variants, compounds, defaults, responsive, respClasses, containers, cqClasses, slots, props) => {
  const out = {};
  for (const s of slots) {
    let c = base[s] || "";
    for (const v in variants) {
      const raw = props && props[v] !== undefined ? props[v] : defaults[v];
      c = _applyVariant(c, variants, respClasses, cqClasses, v, raw, defaults[v], s);
    }
    for (const [bp, overrides] of responsive) {
      for (const v in overrides) {
        if (props && props[v] !== undefined) continue;
        const val = overrides[v];
        const add = respClasses[bp] && respClasses[bp][v] && respClasses[bp][v][val]
          ? respClasses[bp][v][val][s]
          : undefined;
        if (add) c += (c ? " " : "") + add;
      }
    }
    for (const [cq, overrides] of containers) {
      for (const v in overrides) {
        if (props && props[v] !== undefined) continue;
        const val = overrides[v];
        const add = cqClasses[cq] && cqClasses[cq][v] && cqClasses[cq][v][val]
          ? cqClasses[cq][v][val][s]
          : undefined;
        if (add) c += (c ? " " : "") + add;
      }
    }
    for (const [match, cls] of compounds) {
      let ok = true;
      for (const v in match) {
        if (_resolveStatic((props && props[v]) ?? defaults[v], defaults[v]) !== match[v]) {
          ok = false;
          break;
        }
      }
      if (ok && cls[s]) c += (c ? " " : "") + cls[s];
    }
    out[s] = c;
  }
  return out;
};

const Badge_base = {
  "root": "Badge_root_1mojuh"
};

const Badge_variants = {
  "tone": {
    "neutral": {
      "root": "Badge_tone_neutral_root_1mojuh"
    },
    "success": {
      "root": "Badge_tone_success_root_1mojuh"
    }
  }
};

const Badge_compounds = [];

const Badge_defaults = {
  "tone": "neutral"
};

const Badge_responsive = [];

const Badge_respClasses = {};

const Badge_containers = [];

const Badge_cqClasses = {};

export function Badge(props) {
  return _h(Badge_base, Badge_variants, Badge_compounds, Badge_defaults, Badge_responsive, Badge_respClasses, Badge_containers, Badge_cqClasses, ["root"], props);
}
"
`;

exports[`golden fixtures > styles.arv > css 1`] = `
".truncate_0tgf3h {
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.panel_16w2cv {
  border: 1px solid #e5e5e5;
  background: white;
  padding: 8px;
}

.panel_16w2cv:hover {
  border-color: #635bff;
}
"
`;

exports[`golden fixtures > styles.arv > dts 1`] = `
"// Generated by @arviahq/compiler - do not edit.

export declare const truncate: string;

export declare const panel: string;
"
`;

exports[`golden fixtures > styles.arv > js 1`] = `
"// Generated by @arviahq/compiler - do not edit.

export const truncate = "truncate_0tgf3h";

export const panel = "panel_16w2cv";
"
`;

exports[`golden fixtures > theme-only.arv > css 1`] = `
"html, body {
  margin: 0;
  padding: 0;
}

* {
  box-sizing: border-box;
}

body {
  color: #635bff;
}
"
`;

exports[`golden fixtures > theme-only.arv > dts 1`] = `
"// Generated by @arviahq/compiler - do not edit.
export {};
"
`;

exports[`golden fixtures > theme-only.arv > js 1`] = `
"// Generated by @arviahq/compiler - do not edit.
export {};
"
`;
